apps/overlay/d1-blue/flux-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flux-ingress
  namespace: flux-system
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - "*.d1.gitops.olegen.fun"
    - "d1.gitops.olegen.fun"
    secretName: le-cert-wildcard
  rules:
  - host: flux.d1.gitops.olegen.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: ww-gitops-weave-gitops
            port:
              number: 9001
  ingressClassName: nginx
