apps/overlay/d1-blue/kagent-ui-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kagent-ingress
  namespace: kagent
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  tls:
  - hosts:
    - "*.d1.gitops.olegen.fun"
    - "d1.gitops.olegen.fun"
    secretName: le-cert-wildcard
  rules:
  - host: kagent.d1.gitops.olegen.fun
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kagent
            port:
              number: 80
  ingressClassName: nginx
